--- a/index.html
+++ b/index.html
@@ -7,35 +7,73 @@
 </head>
 <body>
     <div class="topbar">
-    <h1 class="fyg">fyg.</h1>
-    </div>
+  <h1 class="fyg">fyg.</h1>
+  <h1 class="fygTest"><a href="https://zerezes.com.br">test now</a></h1>
+</div>
+
 
     <img src="Fyg.pdf.png" id="fygimage">
 
-    <h1 class="your-eye">Your eye. Your style</h1>
+    <h1 class="your-eye">Your eye. Your style.</h1>
 
 </body>
 <style>
 
-  .topbar{
-     padding: 0px 40px;  /* reduced horizontal padding for desktop */
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  background-color: white;
-  z-index: 1000; /* keep above other content */
-  box-sizing: border-box;
-  border: 1px solid black ;
-    
-  }
+  
 
-    #fygimage {
+  .fygTest a {
+  text-decoration: none !important;
+  color: inherit;
+  cursor: pointer;
+}
+
+.fygTest:hover{
+  color: rgb(104, 133, 211);               /* or any color you want */
+  text-decoration: none;     /* avoid underline on hover if desired */
+  cursor: pointer;
+}
+
+
+.topbar {
+  display: flex;
+  justify-content: space-between; /* content on sides */
+  align-items: center;
+  padding: 25px 40px; /* original padding */
+  position: fixed;
+  top: 0; left: 0; right: 0;
+  background-color: white;
+  z-index: 1000;
+  box-sizing: border-box;
+  border: 1px solid black;
+}
+
+.fyg, .fygTest {
+  font-family: 'Times New Roman', Times, serif;
+  font-weight: 400;
+  letter-spacing: -2px;
+  margin: 0;
+}
+
+.fyg {
+  font-size: 60px;
+}
+
+.fygTest {
+  font-size: 60px;
+}
+
+.fygTest a {
+  text-decoration: none;
+  color: inherit;
+  cursor: pointer;
+}
+
+#fygimage {
   max-width: 100%;
   height: auto;
   object-fit: cover;
-  display: block; /* remove inline gap */
-  margin: 0 auto; /* center the image */
+  display: block;
+  margin: 0 auto;
 }
 
 .your-eye {
@@ -46,40 +84,32 @@
   font-size: 100px;
 }
 
-.fyg {
-  font-family: 'Times New Roman', Times, serif;
-  font-weight: 400;
-  letter-spacing: -2px;
-  
-  font-size: 60px;
-}
-
 @media (max-width: 600px) {
   .topbar {
-    padding: 15px 15px; /* smaller padding for mobile */
+    padding: 15px 15px;
+  }
+  .fyg, .fygTest {
+    font-size: 30px;
   }
   #fygimage {
-    height: 50vh; /* maintain a good visible height */
-    max-width: 90vw; /* slightly smaller width */
+    height: auto; /* original auto height */
+    max-width: 100%; /* original width */
   }
   .your-eye {
-    font-size: 40px; /* smaller font for mobile */
-    margin-left: 10px;
-  }
-  .fyg {
-    font-size: 30px;
+    font-size: 60px;
     margin-left: 10px;
   }
   body {
-    padding: 10px; /* small padding around for spacing */
+    padding: 10px;
   }
 }
 
 body {
   margin: 0;
-  overflow-x: hidden; /* prevent horizontal scrolling */
+  overflow-x: hidden;
+  padding-top: 90px; /* prevent content behind fixed topbar */
 }
-    
+
 
    
 
